# qtext

./: CMakeLists.txt
cmake/: QtExtConfig.cmake.in  QtExtVersion.in
etc/: exthello.qt  exthello.qt5  exthello.qt6
src/: plugin.cpp
src/core/: qtext_library.h  qtextglobal.h
src/widgets/: ExtHello  exthello.cpp  exthello.h
